>Created the ghost script. >Added ghost script to the script execution order. >Added simple greedy chasing AI for Blinky. >Added a starting node for Blinky. >Fixed Z coordinates of some game objects.

--- a/pacman.csproj
+++ b/pacman.csproj
@@ -286,6 +286,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\GameBoard.cs" />
+    <Compile Include="Assets\Scripts\Ghost.cs" />
     <Compile Include="Assets\Scripts\Node.cs" />
     <Compile Include="Assets\Scripts\PacmanController.cs" />
     <Compile Include="Assets\Scripts\Tile.cs" />
