--- a/pacman.csproj
+++ b/pacman.csproj
@@ -285,13 +285,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\AIDebug.cs" />
-    <Compile Include="Assets\Scripts\AnimationController.cs" />
-    <Compile Include="Assets\Scripts\GameBoard.cs" />
-    <Compile Include="Assets\Scripts\GhostController.cs" />
-    <Compile Include="Assets\Scripts\Node.cs" />
-    <Compile Include="Assets\Scripts\PacmanController.cs" />
-    <Compile Include="Assets\Scripts\Tile.cs" />
+    <Compile Include="Assets\Scripts\Game\AIDebug.cs" />
+    <Compile Include="Assets\Scripts\Game\AnimationController.cs" />
+    <Compile Include="Assets\Scripts\Game\GameBoard.cs" />
+    <Compile Include="Assets\Scripts\Game\GhostController.cs" />
+    <Compile Include="Assets\Scripts\Game\Node.cs" />
+    <Compile Include="Assets\Scripts\Game\PacmanController.cs" />
+    <Compile Include="Assets\Scripts\Game\Tile.cs" />
+    <Compile Include="Assets\Scripts\Menu\GameMenu.cs" />
+    <Compile Include="Assets\Scripts\Menu\TextBlink.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
